--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -11,7 +11,8 @@ jobs:
   build-and-push:
     name: Build base image
     runs-on: ubuntu-latest
-    if: github.repository_owner == 'deepset-ai'
+    permissions:
+      packages: write
 
     steps:
       - name: Checkout
@@ -23,17 +24,18 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to DockerHub
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_HUB_USER }}
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: deepset/hayhooks
+          images: fozdoiguassu/hayhooks
 
       - name: Build base images
         uses: docker/bake-action@v5
